--- a/agere/about.html
+++ b/agere/about.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>About the Owner</title>
-		<link rel="stylesheet" href="static/css/styles.css">
+		<link rel="stylesheet" href="../static/css/styles.css">
 	</head>
 	<body>
 		<div id="navbar">
-			<a href="index.html">Home</a>
-			<a class="active" href="about.html">About</a>
-			<a href="contact.html">Contact</a>
+			<a href="../index.html">Home</a>
+			<a class="active" href="../about.html">About</a>
+			<a href="../contact.html">Contact</a>
 		</div>
 		<div id="content">
 			<h1>About Me</h1>
