--- a/petre/about.html
+++ b/petre/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>About agere</title>
+		<title>About petre</title>
 		<link rel="stylesheet" href="../static/css/styles.css">
 	</head>
 	<body>
@@ -11,7 +11,7 @@
 			<a href="../contact.html">Contact</a>
 		</div>
 		<div id="content">
-			<h1>What is agere?</h1>
+			<h1>What is petre?</h1>
 		</div>
 	</body>
 </html>
