--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 		<div id="content">
 			<h1>About Me</h1>
 			<a href="agere/about.html">What is agere?</a>
+			<a href="petre/about.html">What is petre?</a>
 		</div>
 	</body>
 </html>
