--- a/about.html
+++ b/about.html
@@ -12,9 +12,8 @@
 		</div>
 		<div id="content">
 			<h1>About Me</h1>
-			<a href="agere/about.html">What is agere?</a>
-			<br>
-			<a href="petre/about.html">What is petre?</a>
+			<p><a href="agere/about.html">What is agere?</a></p>
+			<p><a href="petre/about.html">What is petre?</a></p>
 		</div>
 	</body>
 </html>
