--- a/about.html
+++ b/about.html
@@ -12,8 +12,10 @@
 		</div>
 		<div id="content">
 			<h1>About Me</h1>
-			<p><a href="agere/about.html">What is agere?</a></p>
-			<p><a href="petre/about.html">What is petre?</a></p>
+			<div id="what">
+				<a href="agere/about.html">What is agere?</a>
+				<a href="petre/about.html">What is petre?</a>
+			</div>
 		</div>
 	</body>
 </html>
